“消费返积分”活动新增赠送卡值

--- a/src/i18n/locales/en.messages.json
+++ b/src/i18n/locales/en.messages.json
@@ -634,8 +634,8 @@
     "Sale.k6hdp8zb": "is not set properly",
     "Sale.k6hdp97n": "Start Time",
     "Sale.k6hdpsvl": "End Time",
-    "Sale.k6hdpt3x": "Give points for spending certain amount",
-    "Sale.k6hdptc9": "Give points for spending certain amount each time",
+    "Sale.k6hdpt3x": "Give away for spending certain amount",
+    "Sale.k6hdptc9": "Give away for spending certain amount each time",
     "Sale.k6hdptkl": "Please enter correct amount of Points Given Ratio",
     "Sale.k6hdptsx": "Points Given Ratio",
     "Sale.k6hdpu19": "Please add at least one dish",
